création des dossiers routers, controllers, middleware

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "expess": "^0.0.1-security",
     "express": "^4.18.1",
-    "mongoose": "^6.3.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.3",
+    "mongoose-unique-validator": "^3.0.0",
+    "nodemon": "^2.0.16"
   }
 }
