--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "expess": "^0.0.1-security",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
@@ -18,7 +19,6 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.16"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Halcisse/P6_construisez-une-api-securisee-HalimatouCisse.git"
